Update Taskfile.yaml to improve directory creation for coverage reports
- Replaced the existing command for creating the coverage directory with a PowerShell command to ensure compatibility on Windows platforms.
- This change enhances the task management process by providing a more robust method for directory creation, improving the overall build process for the Godo application.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -50,7 +50,7 @@ tasks:
     deps: [ wire ]
     platforms: [ windows ]
     cmds:
-    - mkdir -p {{.COVERAGE_DIR}}
+    - powershell New-Item -ItemType Directory -Force -Path {{.COVERAGE_DIR}}
     - go test -race -coverprofile={{.COVERAGE_DIR}}/coverage.out -covermode=atomic ./...
     - go tool cover -html={{.COVERAGE_DIR}}/coverage.out -o {{.COVERAGE_DIR}}/coverage.html
 
