--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -10,9 +10,15 @@ database:
 logger:
   level: "info"
   console: true
+  file: false
+  file_path: ""
+  output: [ "stdout" ]
+  error_output: [ "stderr" ]
 
 hotkeys:
-  quick_note: "Ctrl+Alt+G"
+  quick_note:
+    modifiers: [ "Ctrl", "Shift" ]
+    key: "N"
 
 ui:
   main_window:
@@ -25,5 +31,7 @@ ui:
 
 http:
   port: 8080
-  read_timeout: 10
-  write_timeout: 10
+  read_timeout: 30
+  write_timeout: 30
+  read_header_timeout: 10
+  idle_timeout: 120
