--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,6 +6,7 @@ before:
 
 builds:
 - id: windows
+  main: ./cmd/godo
   env:
   - CGO_ENABLED=1
   - CC=x86_64-w64-mingw32-gcc
@@ -19,6 +20,7 @@ builds:
   - windows
 
 - id: linux
+  main: ./cmd/godo
   env:
   - CGO_ENABLED=1
   goos:
