refactor: enhance documentation and comments across various components
- Updated .vscode settings for improved Go linting configuration.
- Added package-level comments to the cmd/test and internal/container packages for better clarity.
- Improved inline comments in the hotkey manager to clarify the purpose of empty blocks.
- Refined error handling in the config package by updating error types for consistency.
- Enhanced test coverage in the config package with additional validation tests.
- Improved mock implementations in the GUI package with detailed comments.
- These changes aim to improve code readability, maintainability, and overall documentation quality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,21 @@
 {
+    "go.lintTool": "golangci-lint",
+    "go.lintFlags": [
+        "--fast"
+    ],
+    "go.lintOnSave": "package",
+    "go.useLanguageServer": true,
     "gopls": {
-        "buildFlags": ["-tags=wireinject,!wireinject"]
+        "formatting.gofumpt": true,
+        "ui.diagnostic.analyses": {
+            "unusedparams": true,
+            "shadow": true
+        }
+    },
+    "[go]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        }
     }
 } 
