refactor: enhance type safety and update configuration in container and common packages
- Introduced new distinct types for logger output paths and timeout values to improve clarity and type safety.
- Updated LoggerOptions and HTTPOptions structs to utilize the new types, enhancing configuration management.
- Refactored ProvideHotkeyManager to accommodate new hotkey management logic and updated dependencies.
- Modified VSCode settings to disable automatic import organization on save, allowing for manual control.
- Improved comments and documentation across the affected files for better maintainability and understanding.

These changes aim to streamline dependency injection and enhance the overall structure of the application.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": "explicit"
         }
+    },
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "never"
     }
 } 
