--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
         "ui.diagnostic.analyses": {
             "unusedparams": true,
             "shadow": true
-        }
+        },
+        "buildFlags": ["-tags=wireinject,windows"]
     },
     "[go]": {
         "editor.formatOnSave": false,
