refactor: update Taskfile and VSCode settings for improved Windows support
- Modified Taskfile.yaml to specify Windows dependencies for linting and testing tasks, ensuring compatibility with the Windows environment.
- Updated test command to include specific build tags for Windows, enhancing test execution context.
- Adjusted VSCode settings to enable automatic formatting on save and changed import organization behavior, improving the development experience.

These changes aim to enhance the development workflow and ensure better support for Windows users.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,9 +14,10 @@
         "buildFlags": ["-tags=wireinject,windows"]
     },
     "[go]": {
-        "editor.formatOnSave": false,
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "golang.go",
         "editor.codeActionsOnSave": {
-            "source.organizeImports": "explicit"
+            "source.organizeImports": "never"
         }
     },
     "editor.codeActionsOnSave": {
