refactor: enhance build script and Taskfile for improved error handling and Windows compatibility
- Updated Taskfile.yaml to simplify the command for building Docker images by removing unnecessary dependencies.
- Enhanced build/build.ps1 with strict mode, improved error handling, and clearer output messages for both Linux and Windows builds.
- Added checks to ensure Docker is installed and to handle errors gracefully during the build process.
- These changes aim to improve the reliability and clarity of the build process, ensuring better support for both Windows and Linux environments.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -114,9 +114,8 @@ tasks:
 
   docker:build-all:
     desc: Build both Windows and Linux binaries using Docker
-    deps: [ wire ]
     cmds:
-    - powershell ./build/build.ps1
+    - powershell -ExecutionPolicy Bypass -File ./build/build.ps1
 
   docker:build-linux:
     desc: Build Linux binary using Docker
